--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 60px;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +44,28 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+#root {
+  padding: 25px;
+}
+
+.center-of-page {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main {
+
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
+  padding-top: 10px;
 }
