--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,8 @@ body {
   background-color: #f5f5f5;
   padding-top: 10px;
 }
+
+h1, h2, h3, h4 {
+  padding-bottom: 5px;
+  border-bottom: 2px #f5f5f5 solid;
+}
